# instagram_test

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PyCI.yml
get_inst_posts/: cli.py  get_posts.py
get_inst_posts/scripts/: main.py
